NetBSD Problem Report #41755

From www@NetBSD.org  Mon Jul 20 12:55:22 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id E023363BC5D
	for <gnats-bugs@gnats.netbsd.org>; Mon, 20 Jul 2009 12:55:22 +0000 (UTC)
Message-Id: <20090720125522.A1D2B63BBD1@www.NetBSD.org>
Date: Mon, 20 Jul 2009 12:55:22 +0000 (UTC)
From: Christoph_Egger@gmx.de
Reply-To: Christoph_Egger@gmx.de
To: gnats-bugs@NetBSD.org
Subject: NetBSD/Xen Dom0 doesn't boot on large machines
X-Send-Pr-Version: www-1.0

>Number:         41755
>Category:       port-xen
>Synopsis:       NetBSD/Xen Dom0 doesn't boot on large machines
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    port-xen-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Jul 20 13:00:00 +0000 2009
>Closed-Date:    Tue Nov 24 14:13:39 +0000 2009
>Last-Modified:  Tue Nov 24 14:13:39 +0000 2009
>Originator:     Christoph Egger
>Release:        -current
>Organization:
>Environment:
NetBSD/Xen amd64 Dom0
>Description:

Booting Dom0 on a large machine panics with

   cpu12 at mainbus0 apid 32panic: cpu at apic id 32 already attached?

A native GENERIC kernel boots fine with all CPUs enabled.
The problem is the phycpu_info array in sys/arch/xen/x86/cpu.c
makes the wrong assumption that the array index matches the apic id.

On the big machine, cpu0 starts with apic id 20 and cpu23 ends with
apic id 44.

Christoph

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: Christoph Egger <cegger@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41755 CVS commit: src/sys/arch/xen/x86
Date: Tue, 24 Nov 2009 13:04:04 +0000

 Module Name:	src
 Committed By:	cegger
 Date:		Tue Nov 24 13:04:04 UTC 2009

 Modified Files:
 	src/sys/arch/xen/x86: cpu.c

 Log Message:
 Remove X86_MAXPROCS. This fixes PR port-xen/41755.
 This also reduces diff to x86/x86/cpu.c as a nice side effect.
 'looks good' bouyer@


 To generate a diff of this commit:
 cvs rdiff -u -r1.37 -r1.38 src/sys/arch/xen/x86/cpu.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: cegger@NetBSD.org
State-Changed-When: Tue, 24 Nov 2009 14:13:39 +0000
State-Changed-Why:
fix committed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.