Remove X86_MAXPROCS. This fixes PR port-xen/41755. This also reduces diff to x86/x86/cpu.c as a nice side effect. 'looks good' bouyer@